--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "swiper": "^8.0.6"
   },
   "devDependencies": {
+    "eslint": "^8.11.0",
     "prettier": "^2.2.1",
     "snowpack": "^3.3.7"
   }
