--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "swiper": "^8.0.6"
   },
   "devDependencies": {
+    "@snowpack/plugin-postcss": "^1.4.3",
+    "autoprefixer": "^10.4.4",
     "eslint": "^8.11.0",
+    "postcss": "^8.4.12",
+    "postcss-preset-env": "^7.4.3",
     "prettier": "^2.2.1",
     "snowpack": "^3.3.7"
   }
