--- a/package.json
+++ b/package.json
@@ -4,19 +4,29 @@
     "build": "snowpack build",
     "test": "echo \"This template does not include a test runner by default.\" && exit 1",
     "format": "prettier --write \"src/**/*.js\"",
-    "lint": "prettier --check \"src/**/*.js\""
+    "lint": "prettier --check \"src/**/*.js\"",
+    "prepare": "husky install"
   },
   "dependencies": {
     "canvas-confetti": "^1.2.0",
+    "mrm": "^2.6.2",
     "swiper": "^8.0.6"
   },
   "devDependencies": {
     "@snowpack/plugin-postcss": "^1.4.3",
     "autoprefixer": "^10.4.4",
     "eslint": "^8.11.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.7",
     "postcss": "^8.4.12",
     "postcss-preset-env": "^7.4.3",
     "prettier": "^2.2.1",
     "snowpack": "^3.3.7"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --cache --fix",
+      "prettier --write"
+    ]
   }
 }
