--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "canvas-confetti": "^1.2.0",
+    "lint-staged": "^12.3.7",
     "mrm": "^2.6.2",
     "swiper": "^8.0.6"
   },
@@ -16,17 +17,13 @@
     "@snowpack/plugin-postcss": "^1.4.3",
     "autoprefixer": "^10.4.4",
     "eslint": "^8.11.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.7",
     "postcss": "^8.4.12",
     "postcss-preset-env": "^7.4.3",
     "prettier": "^2.2.1",
     "snowpack": "^3.3.7"
   },
   "lint-staged": {
-    "*.js": [
-      "eslint --cache --fix",
-      "prettier --write"
-    ]
+    "*.js": "eslint --cache --fix",
+    "*.{js,html,json,css}": "prettier --write"
   }
 }
