--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "canvas-confetti": "^1.2.0",
     "lint-staged": "^12.3.7",
     "mrm": "^2.6.2",
+    "navigo": "^8.11.1",
     "swiper": "^8.0.6"
   },
   "devDependencies": {
